# c_rdma_demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  cm_id.c  cq.c  event_channel.c  farm_client.c  farm_server.c  mr.c  pd.c  qp.c  rdma_common.h  rdma_conn.c  rdma_rw_channel.c  rdma_rw_channel.h  read_write.c  send_recv.c  server.c
farm/: farm.h  recv_buffer.c  send_buffer.c
include/: rdma_common.h
myrdma/: cm_id.c  cm_id.h  cq.c  cq.h  event_channel.c  event_channel.h  mr.c  mr.h  pd.c  pd.h  qp.c  qp.h  rdma_conn.c  rdma_conn.h  send_recv.c  send_recv.h
rdma/: cm_id.c  cq.c  event_channel.c  mr.c  pd.c  qp.c  rdma_conn.c  rdma_conn.h  read_write.c  send_recv.c
util/: parameter.h
